--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,18 @@ navigation:
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="#">
+
+    <!-- Analytics -->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46815761-1', 'growthapp.net');
+  ga('send', 'pageview');
+  </script>
+    
   </head>
   
   <body>
@@ -77,8 +89,10 @@ navigation:
     
     <!-- Page starts -->
     <div class="blog">
-      <div class="container">
-      {{ content }}
+      <div class="container shots">
+        <div class="shot-content-body">
+        {{ content }}
+        </div>
       </div>
     </div>
     <!-- Page ends -->
@@ -88,9 +102,15 @@ navigation:
       <div class="container">
         
         <div class="row">
-          <div class="col-md-12">
-            <div class="copy text-center">
-              &copy; 2014 <a href="http://www.clafou.com">Clafou Apps</a>
+          <div class="col-xs-6">
+            <div class="copy">
+              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="http://www.facebook.com/growthchartapp">Facebook</a> | <a href="http://www.twitter.com/growthchart">Twitter</a>
+            </div>
+          </div>
+
+          <div class="col-xs-6">
+            <div class="copy text-right">
+              &copy; 2014 <a href="http://www.clafou.com">Clafou Apps</a>. All rights reserved.
             </div>
           </div>
         </div>        
