--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -36,6 +36,18 @@ navigation:
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="#">
+
+    <!-- Analytics -->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46815761-1', 'growthapp.net');
+  ga('send', 'pageview');
+  </script>
+
   </head>
   
   <body>
@@ -97,17 +109,15 @@ navigation:
             <div class="col-md-8">
               <div class="intro">
                 <h2>Follow your child's growth</h2>
-                <p>
-              <a href="https://itunes.apple.com/us/app/growth-charts-for-baby-child/id446639811?mt=8"><img src="img/appstore135x40.png" alt="Download"></a> On iPhone and iPad</p>
-
+                <p>On iPhone and iPad</p>
+              <p><a href="https://itunes.apple.com/us/app/growth-charts-for-baby-child/id446639811?mt=8"><img src="img/appstore135x40.png" alt="Download" class="padded-vertical"></a></p>
               </div>
             </div>
             <div class="col-md-4">
-              <div>
+              <div class="intro">
                 <a href="https://itunes.apple.com/us/app/growth-charts-for-baby-child/id446639811?mt=8">
-                  <img src="img/icon200x200.png" alt="image" class="img-responsive"/>
+                  <img src="img/icon200x200.png" alt="app icon" class="padded-vertical"/>
                 </a>
-                <br>
               </div>
             </div>
           </div>
@@ -189,14 +199,14 @@ navigation:
                 <div class="col-md-6 col-xs-6">
                   <div class="shot-content-body">
                     <h4><i class="icon-print tblue"></i>Share and print</h4>
-                    <p>Export to CSV, PDF, JPEG<br>
+                    <p>Export to CSV, PDF, JPEG.<br>
                       Send as a formatted email.<br>
                       Print wirelessly as PDF.
                   </div>
                 </div>
                 <div class="col-md-6 col-xs-6">
                   <div class="shot-content-body">
-                    <h4><i class="icon-cloud-upload tblue"></i>AirDrop and file transfer</h4>
+                    <h4><i class="icon-exchange tblue"></i>AirDrop and file transfer</h4>
                     <p>AirDrop or email your data to other iPhones or iPads. Great for sharing with the other parent.<br>
                   </div>
                 </div>
@@ -221,7 +231,7 @@ navigation:
               <div class="row">
                 <div class="col-xs-6">
                   <div class="shot-content-body">
-                    <h4><i class="icon-signal tblue"></i>All ages: babies, toodlers, children, teens</h4>
+                    <h4><i class="icon-signal tblue"></i>All ages: babies, toddlers, children, teens</h4>
                     <p>Continue tracking growth long after the days of diaper tracking and breastfeeding are over. This dedicated app will outlive baby apps.</p>
                   </div>
                 </div>
@@ -242,7 +252,7 @@ navigation:
                 </div>
                 <div class="col-xs-6">
                   <div class="shot-content-body">
-                    <h4><i class="icon-heart tblue"></i>Preemie-friendly</h4>
+                    <h4><i class="icon-heart tblue"></i>Premie-friendly</h4>
                     <p>Dedicated preterm charts and corrected age support for premature babies.</p>
                   </div>
                 </div>
@@ -264,9 +274,15 @@ navigation:
       <div class="container">
         
         <div class="row">
-          <div class="col-md-12">
-            <div class="copy text-center">
-              &copy; 2014 <a href="http://www.clafou.com">Clafou Apps</a>
+          <div class="col-xs-6">
+            <div class="copy">
+              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="http://www.facebook.com/growthchartapp">Facebook</a> | <a href="http://www.twitter.com/growthchart">Twitter</a>
+            </div>
+          </div>
+
+          <div class="col-xs-6">
+            <div class="copy text-right">
+              &copy; 2014 <a href="http://www.clafou.com">Clafou Apps</a>. All rights reserved.
             </div>
           </div>
         </div>        
