--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -110,12 +110,12 @@ navigation:
               <div class="intro">
                 <h2>Follow your child's growth</h2>
                 <p>On iPhone and iPad</p>
-              <p><a href="taps.io/J0aQ"><img src="img/appstore135x40.png" alt="Download" class="padded-vertical"></a></p>
+              <p><a href="http://taps.io/J0aQ"><img src="img/appstore135x40.png" alt="Download" class="padded-vertical"></a></p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="intro">
-                <a href="taps.io/J0aQ">
+                <a href="http://taps.io/J0aQ">
                   <img src="img/icon200x200.png" alt="app icon" class="padded-vertical"/>
                 </a>
               </div>
