Added review quotes and TapStream script

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -48,6 +48,29 @@ navigation:
   ga('send', 'pageview');
   </script>
 
+  <!-- TapStream -->
+  <script type="text/javascript">
+
+  var _tsq = _tsq || [];
+  _tsq.push(["setAccountName", "growth"]);
+  _tsq.push(["fireHit", "growthapp", []]);
+
+  (function() {
+      function z(){
+          var s = document.createElement("script");
+          s.type = "text/javascript";
+          s.async = "async";
+          s.src = window.location.protocol + "//cdn.tapstream.com/static/js/tapstream.js";
+          var x = document.getElementsByTagName("script")[0];
+          x.parentNode.insertBefore(s, x);
+      }
+      if (window.attachEvent)
+          window.attachEvent("onload", z);
+      else
+          window.addEventListener("load", z, false);
+  })();
+  </script>  
+
   </head>
   
   <body>
@@ -170,9 +193,22 @@ navigation:
           </div>
           
         </div>
-        <hr>
         <!-- shot1 ends -->
-        
+
+      </div>
+    </div>
+    <!-- review -->
+    <div class="review">
+      <div class="container">
+        <h2><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><br>“Excellent”</h2>
+        <h3>“I love the fact that you can choose which growth chart you want”</h3>
+        <p>ChocolateMilk76</p>
+      </div>
+    </div>        
+    <!-- review end -->
+    <div class="shots">
+      <div class="container">
+
         <!-- shot2 -->
         <div class="row">
           <div class="col-md-8">
@@ -219,8 +255,21 @@ navigation:
             </div>
           </div>
         </div>
-        <hr>
         <!-- shot2 ends -->
+
+      </div>
+    </div>
+    <!-- review -->
+    <div class="review">
+      <div class="container">
+        <h2><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><br>“Very helpful”</h2>
+        <h3>“This application has helped me keep better track on my daughters' progress. Love it.”</h3>
+        <p>Whitekitty002</p>
+      </div>
+    </div>        
+    <!-- review end -->
+    <div class="shots">
+      <div class="container">
         
         <!-- shot3 -->
         <div class="row">
@@ -262,10 +311,18 @@ navigation:
           </div>
         </div>
         <!-- shot3 ends -->
-        <hr>
+
       </div>
-      
     </div>
+    <!-- review -->
+    <div class="review">
+      <div class="container">
+        <h2><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><br>“Easy to use”</h2>
+        <h3>“Straightforward, simple to use. Love not having to guess at the charts- this tells you the exact percentage for weight, height, and head circ!”</h3>
+        <p>Kellyanne91</p>
+      </div>
+    </div>        
+    <!-- review end -->
     
     <!-- Shots Ends --> 
     
