--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@ navigation:
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">    
     <!-- Title here -->
     <title>Growth</title>
     <!-- Description, Keywords and Author -->
@@ -70,7 +71,7 @@ navigation:
           window.addEventListener("load", z, false);
   })();
   </script>
-  
+
   </head>  
   <body>
     
