--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -12,6 +12,7 @@ navigation:
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">    
     <!-- Title here -->
     <title>Growth</title>
     <!-- Description, Keywords and Author -->
