Filled in the meta tags with description, keywords, author

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@ navigation:
     <!-- Title here -->
     <title>Growth</title>
     <!-- Description, Keywords and Author -->
-    <meta name="description" content="Your description">
-    <meta name="keywords" content="Your,Keywords">
-    <meta name="author" content="ResponsiveWebInc">
+    <meta name="description" content="The growth charts app for baby and child tracking">
+    <meta name="keywords" content="ios,iphone,ipad,growth,charts,growth charts,clafou,baby,infant,child,weight,height,head circumference,BMI,WHO,CDC,Fenton,preterm,permature,premie,preemie">
+    <meta name="author" content="Clafou Apps">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
