--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -127,7 +127,7 @@ navigation:
         <div class="row">
           <div class="col-xs-6">
             <div class="copy">
-              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="presskit.zip">Press Kit</a>
+              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="/presskit.zip">Press Kit</a>
             </div>
           </div>
 
