--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -334,7 +334,7 @@ navigation:
         <div class="row">
           <div class="col-xs-6">
             <div class="copy">
-              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="presskit.zip">Press Kit</a>
+              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="/presskit.zip">Press Kit</a>
             </div>
           </div>
 
