Removed header and review bar, added app meta tag

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -19,6 +19,7 @@ navigation:
     <meta name="description" content="The growth charts app for baby and child tracking">
     <meta name="keywords" content="ios,iphone,ipad,growth,charts,growth charts,clafou,baby,infant,child,weight,height,head circumference,BMI,WHO,CDC,Fenton,preterm,permature,premie,preemie">
     <meta name="author" content="Clafou Apps">
+    <meta name="apple-itunes-app" content="app-id=446639811">    
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
@@ -76,55 +77,8 @@ navigation:
   
   <body>
 
-    <!-- Review bar starts -->
-<div
-    id="review-bar-container"
-    data-account="growth"
-    data-background-color="#1E1E1E"
-    data-text-color="#FFFFFF"
-    data-button-color="#0099CC"
-    data-review-url="https://itunes.apple.com/us/app/growth-charts/id446639811?mt=8"
-    data-content-push-down="false">
-</div>
-
-<script type="text/javascript">
-    (function() {
-        function z(){
-            var s = document.createElement("script");
-            s.type = "text/javascript";
-            s.async = "async";
-            s.src = window.location.protocol + "//cdn.tapstream.com/static/js/reviewbar.js";
-            var x = document.getElementsByTagName("script")[0];
-            x.parentNode.insertBefore(s, x);
-        }
-        if (window.attachEvent)
-            window.attachEvent("onload", z);
-        else
-            window.addEventListener("load", z, false);
-    })();
-</script>       
-
-
-
-
-    
     <!-- Top Starts -->
     <div class="top">
-      
-      
-      <!-- Header Starts -->
-      <header>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="logo">
-                <h1><a href="#">Growth</span></a></h1>
-              </div>
-            </div>
-          </div>
-        </div>
-      </header>
-      <!-- Header Ends -->
       
       <!-- Hero starts -->
       <div class="hero">
@@ -132,7 +86,7 @@ navigation:
           <div class="row">
             <div class="col-md-8">
               <div class="intro">
-                <h2>Follow your child's growth</h2>
+                <h2>Track your child's growth</h2>
                 <p>On iPhone and iPad</p>
               <p><a href="http://taps.io/J0aQ"><img src="img/appstore135x40.png" alt="Download" class="padded-vertical"></a></p>
               </div>
@@ -340,7 +294,7 @@ navigation:
 
           <div class="col-xs-6">
             <div class="copy text-right">
-              &copy; 2014 <a href="http://www.clafou.com">Clafou Apps</a>. All rights reserved.
+              &copy; 2015 <a href="http://www.clafou.com">Clafou Apps</a>. All rights reserved.
             </div>
           </div>
         </div>        
