Added mailchimp sign-up

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -278,13 +278,22 @@ navigation:
       </div>
     </div>        
     <!-- review end -->
-    
+
     <!-- Shots Ends --> 
     
     <!-- Footer starts -->
     <footer>
       <div class="container">
-        
+
+        <!-- subscribe -->
+        <div class="row">
+          <div class="text-center">
+            {% include mailchimp.html %}
+          </div>
+          <br>
+        </div>
+        <!-- subscribe ends -->
+
         <div class="row">
           <div class="col-xs-6">
             <div class="copy">
@@ -298,7 +307,7 @@ navigation:
             </div>
           </div>
         </div>        
-        
+
       </div>
     </footer>
     <!-- Footer Ends -->
