Moved the press kit to a DropBox shared folder

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -297,7 +297,7 @@ navigation:
         <div class="row">
           <div class="col-xs-6">
             <div class="copy">
-              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="/presskit.zip">Press Kit</a>
+              <a href="/">Home</a> | <a href="/support">Support</a> | <a href="https://www.dropbox.com/sh/n538jwhra56w03t/AADTX6qFBLfJMF17sZtv1j42a?dl=0">Press Kit</a>
             </div>
           </div>
 
