Removed deprecated redcarpet, more details in backup page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@ navigation:
     <!-- Description, Keywords and Author -->
     <meta name="description" content="The growth charts app for baby and child tracking">
     <meta name="keywords" content="ios,iphone,ipad,growth,charts,growth charts,clafou,baby,infant,child,weight,height,head circumference,BMI,WHO,CDC,Fenton,preterm,permature,premie,preemie">
-    <meta name="author" content="Clafou Apps">
+    <meta name="author" content="Clafou Ltd">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
@@ -119,7 +119,7 @@ navigation:
 
           <div class="col-xs-6">
             <div class="copy text-right">
-              &copy; 2015 <a href="http://www.clafou.com">Clafou Apps</a>. All rights reserved.
+              &copy; 2018 <a href="http://www.clafou.com">Clafou Ltd</a>. All rights reserved.
             </div>
           </div>
         </div>        
