--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,6 +100,13 @@ navigation:
     <div class="blog">
       <div class="container shots">
         <div class="shot-content-body">
+            <div id="google_translate_element" style="padding:1em;"></div>
+            <script type="text/javascript">
+            function googleTranslateElementInit() {
+              new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'en,fr,de,es,zh-CN,ja', autoDisplay: false}, 'google_translate_element');
+            }
+            </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+            </div>          
         {{ content }}
         </div>
       </div>
